--- a/system/commands/eval_whitebox_attacks.yml
+++ b/system/commands/eval_whitebox_attacks.yml
@@ -8,7 +8,7 @@ commands:
   # CIFAR10, resnet34, tta
 #  - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/regular/resnet34_00            --checkpoint_file ckpt.pth        --method tta            --attack_dir whitebox_pgd_targeted_iters_1_ttas_256    --batch_size 100 --num_workers 20 --dump_dir tta, 11000]
 #  # CIFAR10, resnet34, random_forest
-  - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/regular/resnet34_00            --checkpoint_file ckpt.pth        --method random_forest  --attack_dir whitebox_pgd_targeted_iters_1_ttas_256   --batch_size 100 --num_workers 30 --dump_dir random_forest, 11000]
+#  - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/regular/resnet34_00            --checkpoint_file ckpt.pth        --method random_forest  --attack_dir whitebox_pgd_targeted_iters_1_ttas_256   --batch_size 100 --num_workers 30 --dump_dir random_forest, 11000]
 
   # tiny_imagenet, resnet34, simple
 #  - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/tiny_imagenet/resnet34/regular/resnet34_00      --checkpoint_file ckpt.pth        --method simple         --attack_dir whitebox_pgd_targeted_iters_1_ttas_256    --batch_size 100 --num_workers 20 --dump_dir simple, 11000]
