--- a/system/commands.yml
+++ b/system/commands.yml
@@ -1,12 +1,21 @@
 commands:
- - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/regular/resnet34_00       --method svm_linear        --attack_dir pgd_targeted_eps_0.031     --num_workers 10 --dump_dir svm_linear, 11000]
- - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/regular/resnet34_00       --method svm_linear        --attack_dir cw_targeted_Linf_eps_0.031 --num_workers 10 --dump_dir svm_linear, 11000]
- - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/regular/resnet34_00       --method svm_rbf           --attack_dir pgd_targeted_eps_0.031     --num_workers 10 --dump_dir svm_rbf, 11000]
- - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/regular/resnet34_00       --method svm_rbf           --attack_dir cw_targeted_Linf_eps_0.031 --num_workers 10 --dump_dir svm_rbf, 11000]
+ # global evaluations
+ # cifar 10
+ # - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet34/regular/resnet34_00          --method random_forest --attack_dir None --num_workers 25 --all_attacks --dump_dir global, 11000]
+ # - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet50/regular/resnet50_00          --method random_forest --attack_dir None --num_workers 25 --all_attacks --dump_dir global, 11000]
+ - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar10/resnet101/regular/resnet101_00         --method random_forest --attack_dir None --num_workers 25 --all_attacks --dump_dir global, 11000]
 
-# - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet34/regular/resnet34_00 --method logistic_regression --attack_dir pgd_targeted_eps_0.031     --num_workers 10 --dump_dir logistic_regression, 11000]
- - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet34/regular/resnet34_00 --method logistic_regression --attack_dir cw_targeted_Linf_eps_0.031 --num_workers 10 --dump_dir logistic_regression, 11000]
-# - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet34/regular/resnet34_00 --method svm_linear        --attack_dir pgd_targeted_eps_0.031     --num_workers 10 --dump_dir svm_linear, 11000]
-# - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet34/regular/resnet34_00 --method svm_linear        --attack_dir cw_targeted_Linf_eps_0.031 --num_workers 10 --dump_dir svm_linear, 11000]
-# - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet34/regular/resnet34_00 --method svm_rbf           --attack_dir pgd_targeted_eps_0.031     --num_workers 10 --dump_dir svm_rbf, 11000]
-# - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet34/regular/resnet34_00 --method svm_rbf           --attack_dir cw_targeted_Linf_eps_0.031 --num_workers 10 --dump_dir svm_rbf, 11000]
+ # cifar 100
+ - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet34/regular/resnet34_00          --method random_forest --attack_dir None --num_workers 25 --all_attacks --dump_dir global, 11000]
+ - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet50/regular/resnet50_00          --method random_forest --attack_dir None --num_workers 25 --all_attacks --dump_dir global, 11000]
+ - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/cifar100/resnet101/regular/resnet101_00        --method random_forest --attack_dir None --num_workers 25 --all_attacks --dump_dir global, 11000]
+
+ # svhn
+ - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet34/regular/resnet34_00              --method random_forest --attack_dir None --num_workers 25 --all_attacks --dump_dir global, 11000]
+ - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet50/regular/resnet50_00              --method random_forest --attack_dir None --num_workers 25 --all_attacks --dump_dir global, 11000]
+ - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/svhn/resnet101/regular/resnet101_00            --method random_forest --attack_dir None --num_workers 25 --all_attacks --dump_dir global, 11000]
+
+ # tiny_imagenet
+ - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/tiny_imagenet/resnet34/regular/resnet34_00     --method random_forest --attack_dir None --num_workers 25 --all_attacks --dump_dir global, 11000]
+ - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/tiny_imagenet/resnet50/regular/resnet50_00     --method random_forest --attack_dir None --num_workers 25 --all_attacks --dump_dir global, 11000]
+ - [python active_learning_project/scripts/eval.py --checkpoint_dir /data/gilad/logs/adv_robustness/tiny_imagenet/resnet101/regular/resnet101_00   --method random_forest --attack_dir None --num_workers 25 --all_attacks --dump_dir global, 11000]
