--- a/system/commands.yml
+++ b/system/commands.yml
@@ -1,12 +1,12 @@
 commands:
- - [python active_learning_project/scripts/train_random_forest_sub.py --sub_model mlp6__alpha_0_lr_0.01_wd_0.0001      --alpha 0, 5000]
- - [python active_learning_project/scripts/train_random_forest_sub.py --sub_model mlp6__alpha_0.1_lr_0.01_wd_0.0001    --alpha 0.1, 5000]
- - [python active_learning_project/scripts/train_random_forest_sub.py --sub_model mlp6__alpha_0.2_lr_0.01_wd_0.0001    --alpha 0.2, 5000]
- - [python active_learning_project/scripts/train_random_forest_sub.py --sub_model mlp6__alpha_0.3_lr_0.01_wd_0.0001    --alpha 0.3, 5000]
- - [python active_learning_project/scripts/train_random_forest_sub.py --sub_model mlp6__alpha_0.4_lr_0.01_wd_0.0001    --alpha 0.4, 5000]
- - [python active_learning_project/scripts/train_random_forest_sub.py --sub_model mlp6__alpha_0.5_lr_0.01_wd_0.0001    --alpha 0.5, 5000]
- - [python active_learning_project/scripts/train_random_forest_sub.py --sub_model mlp6__alpha_0.6_lr_0.01_wd_0.0001    --alpha 0.6, 5000]
- - [python active_learning_project/scripts/train_random_forest_sub.py --sub_model mlp6__alpha_0.7_lr_0.01_wd_0.0001    --alpha 0.7, 5000]
- - [python active_learning_project/scripts/train_random_forest_sub.py --sub_model mlp6__alpha_0.8_lr_0.01_wd_0.0001    --alpha 0.8, 5000]
- - [python active_learning_project/scripts/train_random_forest_sub.py --sub_model mlp6__alpha_0.9_lr_0.01_wd_0.0001    --alpha 0.9, 5000]
- - [python active_learning_project/scripts/train_random_forest_sub.py --sub_model mlp6__alpha_1_lr_0.01_wd_0.0001      --alpha 1, 5000]
+ - [python active_learning_project/scripts/train_random_forest_sub.py --sub_dir mlp6__alpha_0_lr_0.01_wd_0.0001      --alpha 0, 5000]
+ - [python active_learning_project/scripts/train_random_forest_sub.py --sub_dir mlp6__alpha_0.1_lr_0.01_wd_0.0001    --alpha 0.1, 5000]
+ - [python active_learning_project/scripts/train_random_forest_sub.py --sub_dir mlp6__alpha_0.2_lr_0.01_wd_0.0001    --alpha 0.2, 5000]
+ - [python active_learning_project/scripts/train_random_forest_sub.py --sub_dir mlp6__alpha_0.3_lr_0.01_wd_0.0001    --alpha 0.3, 5000]
+ - [python active_learning_project/scripts/train_random_forest_sub.py --sub_dir mlp6__alpha_0.4_lr_0.01_wd_0.0001    --alpha 0.4, 5000]
+ - [python active_learning_project/scripts/train_random_forest_sub.py --sub_dir mlp6__alpha_0.5_lr_0.01_wd_0.0001    --alpha 0.5, 5000]
+ - [python active_learning_project/scripts/train_random_forest_sub.py --sub_dir mlp6__alpha_0.6_lr_0.01_wd_0.0001    --alpha 0.6, 5000]
+ - [python active_learning_project/scripts/train_random_forest_sub.py --sub_dir mlp6__alpha_0.7_lr_0.01_wd_0.0001    --alpha 0.7, 5000]
+ - [python active_learning_project/scripts/train_random_forest_sub.py --sub_dir mlp6__alpha_0.8_lr_0.01_wd_0.0001    --alpha 0.8, 5000]
+ - [python active_learning_project/scripts/train_random_forest_sub.py --sub_dir mlp6__alpha_0.9_lr_0.01_wd_0.0001    --alpha 0.9, 5000]
+ - [python active_learning_project/scripts/train_random_forest_sub.py --sub_dir mlp6__alpha_1_lr_0.01_wd_0.0001      --alpha 1, 5000]
